--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -251,6 +251,8 @@
     |
     <a href="http://chinamm.csig.org.cn/2022/paper.html" target="_blank">ChinaMM</a>
     |
+    <a href="https://ccbr99.cn/cfp.html?c=cfp" target="_blank">CCBR</a>
+    |
     <a href="https://www.chilconference.org/index.html" target="_blank">CHIL</a>
     |
     <a href="http://iccrd.org/" target="_blank">ICCRD</a>
