--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ Check out Sheng's up-to-date CV for more details.
   |
   <a href="https://mp.weixin.qq.com/s/yiVbSJXDOf8ZRCvbUClBOQ" target="_blank">《国际期刊预警名单（试行）》正式发布！生物医学占比过半</a>
   |
-  <a href="https://mp.weixin.qq.com/s/4Epm48lJXZnDvDoHw6uHBQ" target="_blank">【学术相关】刚刚，中科院最新预警期刊名单发布！</a>  
+  <a href="https://earlywarning.fenqubiao.com/#/" target="_blank">《国际期刊预警名单》官方网站</a>  
   <br />
   <br />
   
