--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -177,7 +177,7 @@
     |
     <a href="#" target="_blank">KR</a>
     |  
-    <a href="#" target="_blank">ECML-PKDD</a>
+    <a href="https://2022.ecmlpkdd.org/" target="_blank">ECML-PKDD</a>
     |
     <a href="#" target="_blank">CIKM</a>
     |
