--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -911,6 +911,8 @@
     |
     <a href="https://mp.weixin.qq.com/s/GZ_QBPF9iZt_QbziS95WWQ" target="_blank">实践教程｜PyTorch训练加速技巧</a>
     |
+    <a href="https://mp.weixin.qq.com/s/XJ89xitpETEO_x1bykLy2w" target="_blank">Pytorch Lightning 完全攻略</a>
+    |
 <!--   <br /> -->
 
 <br />
