--- a/index.html
+++ b/index.html
@@ -138,7 +138,8 @@ Check out Sheng's up-to-date CV for more details.
   <a href="https://zhuanlan.zhihu.com/p/371282122" target="_blank">NLP 2021-2022会议期刊整理</a> |
   <a href="https://mp.weixin.qq.com/s/dt-yurUZ_T7-58JKvpfuBg" target="_blank">官宣！高质量科技期刊分级目录来了！</a> |
   <a href="https://mp.weixin.qq.com/s/8UWbFXblU6MjccxEX_H4sw" target="_blank">CCF推荐会议 | 软件工程：截稿日期纵览（含ISSTA，FSE/ESEC等）</a> |
-  <a href="https://www.toutiao.com/i7047329902739341835/?tt_from=weixin&utm_campaign=client_share&wxshare_count=1&timestamp=1640866373&app=news_article&utm_source=weixin&utm_medium=toutiao_android&use_new_style=1&req_id=2021123020125301015120909910A79091&share_token=f183a61b-b508-4b50-be9c-f05617a77e7e&group_id=7047329902739341835" target="_blank">计算机顶会论文投稿指南</a>
+  <a href="https://www.toutiao.com/i7047329902739341835/?tt_from=weixin&utm_campaign=client_share&wxshare_count=1&timestamp=1640866373&app=news_article&utm_source=weixin&utm_medium=toutiao_android&use_new_style=1&req_id=2021123020125301015120909910A79091&share_token=f183a61b-b508-4b50-be9c-f05617a77e7e&group_id=7047329902739341835" target="_blank">计算机顶会论文投稿指南</a> |
+  <a href="https://mp.weixin.qq.com/s/VeL-3_easfaaBXlhRxPDgg" target="_blank">67本，CCF分领域发布高质量科技期刊分级目录公示</a> 
   <br />
   <a href="https://mp.weixin.qq.com/s/mEDVpzN04Du869ntLNy4kw" target="_blank">国际顶尖人工智能会议汇总</a>
   |
