--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1373,7 +1373,7 @@
 
 <br />
 <!--   <br /> -->
-NLP/KG field：
+NLP/KG Field：
 <br />
 <!-- MSR -->
     <a href="https://www.microsoft.com/en-us/research/people/fangzwu/" target="_blank">Fangzhao Wu</a> 
@@ -1487,7 +1487,7 @@ NLP/KG field：
     |
   <br />
   <br />
-Machine Learning field：
+Machine Learning Field：
 <br />
     <a href="http://changxu.xyz/" target="_blank">Chang Xu</a>
     |
@@ -1495,19 +1495,19 @@ Machine Learning field：
     |       
   <br />
   <br />
-Complex Networks field：
+Complex Networks Field：
 <br />
     <a href="http://networkscience.cn/" target="_blank">Xiaolong Ren</a>
     |       
   <br />
   <br />
-3D Vision System field:
+3D Vision System Field:
 <br />
     <a href="https://hughw19.github.io/" target="_blank">He Wang</a>
     |       
   <br />
   <br />
-Distributional System field：
+Distributional System Field：
 <br />
 <!-- USA -->
     <a href="https://haow.ca/" target="_blank">Hao Wang [<a href="https://intellisys.haow.ca/" target="_blank">IntelliSys Lab</a>]</a>
@@ -1516,7 +1516,7 @@ Distributional System field：
     | 
   <br />
   <br />
-SE field：
+SE Field：
 <br />
     <a href="https://liuhuigmail.github.io/" target="_blank">Hui Liu</a>
     |
@@ -1533,9 +1533,15 @@ SE field：
     |         
   <br />
   <br />
-Service Computation field：
+Service Computation Field：
 <br />
     <a href="https://computer.ytu.edu.cn/info/1019/1069.htm" target="_blank">Yingjie Wang</a>
+    | 
+  <br />
+  <br />
+Speech and Music Intelligence Field：
+<br />
+    <a href="http://wei-xue.com/" target="_blank">Wei Xue</a>
     | 
   <br />
   <br />
