--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -575,7 +575,7 @@
     <a href="https://eccv2020.eu/accepted-papers/" target="_blank">ECCV</a>
     |
     <!-- Multiagent Systems -->
-    <a href="https://aamas2022-conference.auckland.ac.nz/program/proceedings/" target="_blank">AAMAS</a>
+    <a href="https://dl.acm.org/doi/proceedings/10.5555/3398761" target="_blank">AAMAS</a>
     |
     <!-- Software engineering -->
     <a href="https://icsme2020.github.io/program/Accepted.html" target="_blank">ICSME</a>
