--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -247,6 +247,8 @@
     |
     <a href="https://wise2022.sigappfr.org/" target="_blank">WISE</a>
     |
+    <a href="https://mp.weixin.qq.com/s/zIgGkfakkejiehQsSbpH6w" target="_blank">WISA</a>
+    |
     <a href="https://globecom2022.ieee-globecom.org/" target="_blank">GLOBECOM</a>
     |
     <a href="https://icc2022.ieee-icc.org/" target="_blank">ICC</a>
