--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -163,6 +163,8 @@
     |
     <a href="https://icdcs2022.icdcs.org/call-for-demo-and-posters/" target="_blank">ICDCS</a>
     |
+    <a href="#" target="_blank">ACL</a> (<a href="https://csrr-workshop.github.io/" target="_blank">CSRR</a>)
+    |
     <a href="https://www2022.thewebconf.org/" target="_blank">TheWebConf</a>
     |
     <a href="https://sigir.org/sigir2022/" target="_blank">SIGIR</a>
