--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1508,6 +1508,12 @@ Machine Learning Field：
     |       
   <br />
   <br />
+Database Field：
+<br />
+    <a href="https://fangyixiang.github.io/index.html" target="_blank">Yixiang Fang</a>
+    |     
+  <br />
+  <br />
 Complex Networks Field：
 <br />
     <a href="http://networkscience.cn/" target="_blank">Xiaolong Ren</a>
