--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -175,7 +175,7 @@
     |
     <a href="https://2022.acmmm.org/" target="_blank">ACMM</a>
     |
-    <a href="http://iswc2022.openkg.cn/" target="_blank">ISWC</a>
+    <a href="hhttps://iswc2022.semanticweb.org/" target="_blank">ISWC</a>
     |
     <a href="https://coling2022.org/Cpapers" target="_blank">COLING</a>
     |
