--- a/pages/publications.html
+++ b/pages/publications.html
@@ -105,7 +105,7 @@
 <!--     <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="#"><strong><font color= "#00066f">An Extraction and Verification Framework for Harvesting Temporal Knowledge Graph from News Articles</font></strong></a>. (To be Submitted)</li> -->
 
 
-    <li>Jiasheng Zhang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, Shuang Liang, and <a href="http://cfm.uestc.edu.cn/~shaojie/" target="_blank">Jie Shao</a>, <a href="#"><strong><font color= "#00066f"> EvoExplore: temporal knowledge graph representation learning via co-evolution modeling</font></strong></a>. (Under Review)</li> 
+    <li>Jiasheng Zhang, Shuang Liang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, and <a href="http://cfm.uestc.edu.cn/~shaojie/" target="_blank">Jie Shao</a>, <a href="#"><strong><font color= "#00066f"> EvoExplore: temporal knowledge graph representation learning via co-evolution modeling</font></strong></a>. (Under Review)</li> 
 
 
 
@@ -138,6 +138,7 @@ Neurocomputing (<a href="https://journals.elsevier.com/neurocomputing"><strong><
 
     <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="https://kns.cnki.net/kcms/detail/detail.aspx?dbcode=CDFD&dbname=CDFDLAST2021&filename=1020354617.nh&v=oMy0dWvtjcXNyI6akpSHi6ok3oycZvF%25mmd2FjmzfZewldyCwyzhAnnfFpjzJFiCSS1oQ"><strong><font color= "#00066f">Research and Application of Learning Methods for Knowledge Graphs</font></strong></a>, Chengdu: University of Electronic Science and Technology of China. (Doctoral Dissertation, In Chinese)</li>
 </ol>
+
 
 
 <hr align="left" width="100%">
