--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -217,7 +217,7 @@
     |
     <a href="https://2022.ieeeicassp.org/call_for_papers.php" target="_blank">ICASSP</a>
     |
-    <a href="#" target="_blank">BIBM (<a href="#" target="_blank">Download</a>)</a>
+    <a href="https://ieeebibm.org/BIBM2022/" target="_blank">BIBM (<a href="#" target="_blank">Download</a>)</a>
     |
     <a href="https://2022.naacl.org/calls/tutorials/" target="_blank">NAACL</a>
     |
@@ -1464,6 +1464,9 @@ NLP/KG Field：
     <a href="https://zxlzr.github.io/" target="_blank">Ningyu Zhang</a>
     |
     <a href="https://person.zju.edu.cn/jieyang#0" target="_blank">Jie Yang</a>
+    |
+<!--  Shanghai Jiao Tong University-->
+    <a href="https://thinklab.sjtu.edu.cn/index.html" target="_blank">Junchi Yan</a>
     |
 <!-- Southeast University-->
     <a href="http://seu.wangmengsd.com/" target="_blank">Meng Wang</a>
