--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -151,7 +151,7 @@
 
 
 <h4>2023</h4>
-    <a href="#" target="_blank">ICDE</a>
+    <a href="https://icde2023.ics.uci.edu/" target="_blank">ICDE</a>
     |
     <a href="#" target="_blank">AAMAS</a>
     |
@@ -1418,6 +1418,12 @@ NLP/KG Field：
     <a href="https://chuxuzhang.github.io/" target="_blank">Chuxu Zhang</a>
     |
     <a href="https://eric-xw.github.io/" target="_blank">Xin (Eric) Wang</a>
+    |
+<!-- UIUC -->
+    <a href="https://hongweiw.net/" target="_blank">Hongwei Wang</a>
+    |
+<!-- UK -->
+    <a href="https://www.cs.ox.ac.uk/isg/people/jiaoyan.chen/" target="_blank">Jiaoyan Chen</a>
     |
 <!-- Canada -->
     <a href="https://sites.ualberta.ca/~bang3/index.html" target="_blank">Bang Liu</a> 
