--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -938,6 +938,9 @@
     |
     <a href="https://mp.weixin.qq.com/s/XJ89xitpETEO_x1bykLy2w" target="_blank">Pytorch Lightning 完全攻略</a>
     |
+    <a href="https://mp.weixin.qq.com/s/llrSum-3u_EjDGRdxeXbhA" target="_blank">Pytorch Lightning 完全攻略！</a>
+    |
+    
 <!--   <br /> -->
 
 <br />
