--- a/index.html
+++ b/index.html
@@ -171,6 +171,8 @@ Check out Sheng's up-to-date CV for more details.
 <!--  <br /> -->
   |
   <a href="https://mp.weixin.qq.com/s/Cn5Ns8FaozfgD0AvB6yF8Q" target="_blank">计算机领域国内核心期刊汇总</a>
+  |
+  <a href="https://www.ccf.org.cn/ccftjgjxskwml/2022-02-20/755179.shtml" target="_blank">CCF发布计算领域高质量科技期刊分级目录</a>
 <!--  <br /> -->
   |
   <a href="./venue/通信、计算机等领域常见A类国际学术会议.docx" target="_blank">通信、计算机等领域常见A类国际学术会议</a>
