--- a/index.html
+++ b/index.html
@@ -170,6 +170,8 @@ Check out Sheng's up-to-date CV for more details.
   <a href="https://mp.weixin.qq.com/s?__biz=Mzg4MDE3OTA5NA==&mid=2247490957&amp;idx=1&amp;sn=b9aa515f7833ba1503be298ac2360960&source=41#wechat_redirect" target="_blank">清华发布新版计算机学科推荐学术会议和期刊列表</a>
 <!--  <br /> -->
   |
+  <a href="https://github.com/bugaosuni59/TH-CPL" target="_blank">清华大学计算机学科推荐学术会议和期刊列表 (TH-CPL)</a>
+  |
   <a href="https://mp.weixin.qq.com/s/Cn5Ns8FaozfgD0AvB6yF8Q" target="_blank">计算机领域国内核心期刊汇总</a>
   |
   <a href="https://www.ccf.org.cn/ccftjgjxskwml/2022-02-20/755179.shtml" target="_blank">CCF发布计算领域高质量科技期刊分级目录</a>
