--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1480,6 +1480,9 @@ NLP/KG Field：
 <!--  Shanghai Jiao Tong University-->
     <a href="https://thinklab.sjtu.edu.cn/index.html" target="_blank">Junchi Yan</a>
     |
+<!-- Fudan University (FDU) -->
+    <a href="https://jiangjiechen.github.io/" target="_blank">Jiangjie Chen</a>
+    |
 <!-- Southeast University-->
     <a href="http://seu.wangmengsd.com/" target="_blank">Meng Wang</a>
     |
