--- a/pages/publications.html
+++ b/pages/publications.html
@@ -88,7 +88,7 @@
 <!-- The 25th Pacific-Asia Conference on Knowledge Discovery and Data Mining (<a href="https://pakdd2021.org/"><strong><u><font color="#874e26">PAKDD-21</font></u></strong></a>). Delhi, India, May 11-14 2021 (Under Review)</li> 
  -->
 
-    
+
     <li> <strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="#"><strong><font color= "#00066f">Incorporating Contextualized Definition into Term-Pair Representations for Enhanced Hypernym-hyponym Relation Identification</font></strong></a>. (Under Review)</li>
 
 
@@ -103,6 +103,9 @@
     <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>, <strong><font color= "#00066f">A syntactic-based model for open relation extraction</font></strong></a>. Computer Science (<a href="http://www.jsjkx.com/CN/1002-137X/home.shtml"><strong><u><font color="#874e26">Computer Science</font></u></strong></a>). (In Chinese) (To be Submitted)</li>
 
 <!--     <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="#"><strong><font color= "#00066f">An Extraction and Verification Framework for Harvesting Temporal Knowledge Graph from News Articles</font></strong></a>. (To be Submitted)</li> -->
+
+
+    <li>Peng Zhao, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, Xiaohui Zhan, <a href="#"><strong><font color= "#00066f">An advanced NMF-based approach for single cell data clustering</font></strong></a>. The 2022 2nd International Conference on Information Communication and Software Engineerin (<a href="http://www.icse.org/index.html"><strong><u><font color="#874e26">ICICSE-22</font></u></strong></a>). Chongqing, China, August 18-20 2022 (EI Indexed)</li>
 
 
     <li>Jiasheng Zhang, Shuang Liang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, and <a href="http://cfm.uestc.edu.cn/~shaojie/" target="_blank">Jie Shao</a>, <a href="#"><strong><font color= "#00066f"> Temporal knowledge graph representation learning with local and global evolutions</font></strong></a>. (Under Review)</li> 
@@ -123,8 +126,7 @@ The 28th International Conference on Computational Linguistics (<a href="https:/
 <!-- 2020 year -->
 <h4>2020</h4>
 <ol start="1">
-   <li>Jiasheng Zhang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Zheng Wang, and <a href="http://cfm.uestc.edu.cn/~shaojie/" target="_blank">Jie Shao</a>, <a href="https://link.springer.com/content/pdf/10.1007%2F978-3-030-60259-8_16.pdf"><strong><font color= "#00066f">TKGFrame: A Two-Phase Framework for Temporal-Aware Knowledge Graph Completion</font></strong></a>.
-The 4th Asia Pacific Web and Web-Age Information Management Joint Conference on Web and Big Data (<a href="http://www.tjudb.cn/apwebwaim2020/"><strong><u><font color="#874e26">APWeb-WAIM-20</font></u></strong></a>). Tianjin, China, August 12-14 2020 (CCF-C)</li>
+   <li>Jiasheng Zhang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Zheng Wang, and <a href="http://cfm.uestc.edu.cn/~shaojie/" target="_blank">Jie Shao</a>, <a href="https://link.springer.com/content/pdf/10.1007%2F978-3-030-60259-8_16.pdf"><strong><font color= "#00066f">TKGFrame: A Two-Phase Framework for Temporal-Aware Knowledge Graph Completion</font></strong></a>. The 4th Asia Pacific Web and Web-Age Information Management Joint Conference on Web and Big Data (<a href="http://www.tjudb.cn/apwebwaim2020/"><strong><u><font color="#874e26">APWeb-WAIM-20</font></u></strong></a>). Tianjin, China, August 12-14 2020 (CCF-C)</li>
 
 <!-- 2020 International Conference on Progress in Informatics and Computing (<a href="http://www.picconf.com/"><strong><u><font color="#874e26">PIC-20</font></u></strong></a>). Shanghai, China, December 18-20 2020 (Under Review)</li>  -->
 
