--- a/pages/publications.html
+++ b/pages/publications.html
@@ -77,6 +77,15 @@
     <br />
     "(SELECTED)" refers to the representative works of my primary research direction but not necessarily the best works! )
 
+
+<!-- 2022 year -->
+<h4>2022</h4>
+<ol start="1">
+    <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>, <strong><font color= "#00066f">A syntactic-based model for open relation extraction</font></strong></a>. Computer Science (<a href="http://www.jsjkx.com/CN/1002-137X/home.shtml"><strong><u><font color="#874e26">Computer Science</font></u></strong></a>). (In Chinese) (To be Submitted)</li>
+
+</ol>
+
+
 <!-- 2021 year -->
 <h4>2021</h4>
 <ol start="1">
@@ -100,15 +109,14 @@
     <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>, Chunyan Liu, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, and <a href="http://www.cse.cqu.edu.cn/info/2096/4505.htm" target="_blank">Yan Lei</a>*, <strong><font color= "#00066f">A Systematical Study on Dynamic Fault Localization for Machine Learning Methods</font></strong></a>. (To be Submitted)</li>
 
 
-    <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>, <strong><font color= "#00066f">A syntactic-based model for open relation extraction</font></strong></a>. Computer Science (<a href="http://www.jsjkx.com/CN/1002-137X/home.shtml"><strong><u><font color="#874e26">Computer Science</font></u></strong></a>). (In Chinese) (To be Submitted)</li>
-
 <!--     <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="#"><strong><font color= "#00066f">An Extraction and Verification Framework for Harvesting Temporal Knowledge Graph from News Articles</font></strong></a>. (To be Submitted)</li> -->
 
 
     <li>Peng Zhao, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, Xiaohui Zhan, <a href="#"><strong><font color= "#00066f">An advanced NMF-based approach for single cell data clustering</font></strong></a>. The 2022 2nd International Conference on Information Communication and Software Engineerin (<a href="http://www.icse.org/index.html"><strong><u><font color="#874e26">ICICSE-22</font></u></strong></a>). Chongqing, China, August 18-20 2022 (EI Indexed)</li>
 
 
-    <li>Jiasheng Zhang, Shuang Liang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, and <a href="http://cfm.uestc.edu.cn/~shaojie/" target="_blank">Jie Shao</a>, <a href="#"><strong><font color= "#00066f"> Temporal knowledge graph representation learning with local and global evolutions</font></strong></a>. (Under Review)</li> 
+
+    <li>Jiasheng Zhang, Shuang Liang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, and <a href="http://cfm.uestc.edu.cn/~shaojie/" target="_blank">Jie Shao</a>*, <a href="#"><strong><font color= "#00066f"> Temporal knowledge graph representation learning with local and global evolutions</font></strong></a>. (Under Review)</li> 
 
 
 
@@ -122,6 +130,8 @@
 The 28th International Conference on Computational Linguistics (<a href="https://coling2020.org/"><strong><u><font color="#874e26">COLING-20</font></u></strong></a>). Barcelona, Spain, December 8-11 2019 (CCF: B) (To be Submitted)</li>  -->
 </ol>
 
+
+<!-- 2020 year -->
 <hr align="left" width="100%">
 <!-- 2020 year -->
 <h4>2020</h4>
@@ -142,7 +152,7 @@ Neurocomputing (<a href="https://journals.elsevier.com/neurocomputing"><strong><
 </ol>
 
 
-
+<!-- 2019 year -->
 <hr align="left" width="100%">
 <h4>2019</h4>
 <ol start="1"> 
@@ -169,8 +179,10 @@ The 3rd Asia Pacific Web and Web-Age Information Management Joint Conference on 
 
 <!--      <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="https://dblp.uni-trier.de/pers/hd/z/Zhang:Hekai" target="_blank">Hekai Zhang</a>, <a href="https://dblp.uni-trier.de/pers/hd/g/Gong:Jibing" target="_blank">Jibing Gong</a>, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, and <a href="http://computer.nit.edu.cn/info/1059/2362.htm" target="_blank">Xuefeng Fu</a>, <a href="#"><strong><font color= "#00066f">Hypernym-hyponym relation detection method by incorporating textual knowledge</font></strong></a>. 
 Journal of Computer Applications (<a href="http://www.joca.cn/CN/volumn/home.shtml"><strong><u><font color="#874e26">JCA</font></u></strong></a>). (In Chinese)</li> -->
-    </ol>  
- 
+</ol>  
+
+
+ <!-- 2018 year -->
 <hr align="left" width="100%">
 <h4>2018</h4>
 <ol start="1">
@@ -193,7 +205,8 @@ Application Research of Computers (<a href="http://www.arocmag.com/"><strong><u>
     
 <hr class="style17">
    
-    
+
+<!-- 2017 year -->
 <h4>2017</h4>
 <ol start="1">
     <li><a href="https://faculty.uestc.edu.cn/yazhou/zh_CN/index.htm" target="_blank">Yazhou Ren</a>, Peng Zhao, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, Dezhong Yao, and <a href="https://scholar.google.com/citations?hl=en&user=gF0H9nEAAAAJ" target="_blank">Zenglin Xu</a>, <a href="https://www.ijcai.org/Proceedings/2017/0368.pdf"><strong><font color= "#00066f">A Robust Softmax Regression for Multi-class Classification with Self-Paced Learning</font></strong></a>.
