--- a/pages/publications.html
+++ b/pages/publications.html
@@ -93,7 +93,7 @@
 <!-- The 25th Pacific-Asia Conference on Knowledge Discovery and Data Mining (<a href="https://pakdd2021.org/"><strong><u><font color="#874e26">PAKDD-21</font></u></strong></a>). Delhi, India, May 11-14 2021 (To be Submitted)</li> 
  -->
 
-    <li> <strong><font color="#0076ff">Yongpan Sheng</font></strong><sup>#</sup>, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a><sup>#</sup>, <a href="https://cfm.uestc.edu.cn/~shaojie/" target="_blank">Jie Shao</a>, and <a href="https://wilburone.github.io/index.html" target="_blank">Fuli Huang</a>*, <a href="#"><strong><font color= "#00066f">A Short Survey on Open Relation Extraction from Text Corpora: Recent Advances, Resources and Perspective</font></strong></a>. (Under Review)</li>
+    <li> <strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="https://cfm.uestc.edu.cn/~shaojie/" target="_blank">Jie Shao</a>, and <a href="https://wilburone.github.io/index.html" target="_blank">Fuli Huang</a>*, <a href="#"><strong><font color= "#00066f">A Short Survey on Open Relation Extraction from Text Corpora: Recent Advances, Resources and Perspective</font></strong></a>. (Under Review)</li>
 <!-- The 25th Pacific-Asia Conference on Knowledge Discovery and Data Mining (<a href="https://pakdd2021.org/"><strong><u><font color="#874e26">PAKDD-21</font></u></strong></a>). Delhi, India, May 11-14 2021 (Under Review)</li> 
  -->
 
