--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1558,7 +1558,10 @@ Distributional System Field：
     <a href="https://haow.ca/" target="_blank">Hao Wang [<a href="https://intellisys.haow.ca/" target="_blank">IntelliSys Lab</a>]</a>
     | 
     <a href="https://haow.ca/" target="_blank">Yang You [<a href="https://ai.comp.nus.edu.sg/" target="_blank">HPC-AI</a>]</a>
-    | 
+    |
+<!-- Beijing University -->
+    <a href="http://net.pku.edu.cn/~yangzhi/" target="_blank">Zhi Yang</a>
+    |  
   <br />
   <br />
 SE Field：
