--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1605,7 +1605,13 @@ Neuroscience Field：
     <a href="https://person.zju.edu.cn/htang?ivk_sa=1024320u" target="_blank">Huajin Tang</a>
     |  
   <br />
-  <br />  
+  <br />
+Biochemistry Field：
+<br />
+    <a href="https://minlab.ac.cn/members/" target="_blank">Mingwei Min [<a href="https://minlab.ac.cn/" target="_blank">Min Lab</a>]</a>
+    |
+  <br />
+  <br />    
 </body></html>
 
 
