--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -244,6 +244,8 @@
     |
     <a href="https://www.cs.ubbcluj.ro/tase2022/index.html" target="_blank">TASE</a>
     |
+    <a href="http://ksiresearch.org/seke/seke22.html" target="_blank">SEKE</a>
+    |
     <a href="https://sigspatial2021.sigspatial.org/cfp2022/" target="_blank">ACM SIGSPATIAL</a>
     |
     <a href="https://lrec2022.lrec-conf.org/en/" target="_blank">LREC</a>
