--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -114,6 +114,8 @@
     <li><strong><font color="#874e26"><a href="https://link.springer.com/content/pdf/10.1007%2F978-3-030-72357-6.pdf">Artificial Intelligence (Knowledge Graphs involved)</a></font></strong></li>
 
 
+    <li><strong><font color="#874e26"><a href="https://link.springer.com/book/10.1007/978-981-16-6350-5">A Guide to Graph Algorithms [<a href="https://mp.weixin.qq.com/s/pshCr1ZebfCgzwq9P2YAag" target="_blank">Report</a>]</a></font></strong></li>
+
 
     <li><strong><font color="#874e26"><a href="https://cse.msu.edu/~mayao4/dlg_book/">Deep Learning on Graphs</a></font></strong></li>
 
@@ -1437,6 +1439,8 @@ NLP/KG Field：
     |
 <!-- UIUC -->
     <a href="https://hongweiw.net/" target="_blank">Hongwei Wang</a>
+    |
+    <a href="https://yumeng5.github.io/" target="_blank">Yu Meng</a>
     |
 <!-- UK -->
     <a href="https://www.cs.ox.ac.uk/isg/people/jiaoyan.chen/" target="_blank">Jiaoyan Chen</a>
