--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -331,6 +331,8 @@
     |
     <a href="https://mp.weixin.qq.com/s/02mFl_4JVomaUTPrP0UWBQ" target="_blank">ACL 2022录用结果出炉：国内多支团队晒“战绩”，清华一实验组18篇入选</a>
     |
+    <a href="https://mp.weixin.qq.com/s/UbkAzIf4wWdKOgzxdRxy7w" target="_blank">新闻 | KEG 9篇论文被ACL 2022录用</a>
+    |
     <a href="https://mp.weixin.qq.com/s/BxyIrC9Pvir1hJp3DwAdLQ" target="_blank">7 Papers | AAAI22杰出论文、WSDM22最佳论文；200+文献ViT综述</a>
     |
     <a href="https://mp.weixin.qq.com/s/D2l-9E8Zz-1mNl53dhmLEA" target="_blank">WWW2022推荐系统/计算广告论文集锦</a>
