--- a/pages/index.html
+++ b/pages/index.html
@@ -83,8 +83,8 @@ Email: shengyp2011(at){gmail,163}(dot)com<br>
 <h3>Biography</h3>
 <p>
 <!-- I have finished one-year postdoc in the SNAP group at Stanford, where I worked with Prof. Jure Leskovec. It was an extremely valuable experience for me. I sincerely thank all my colleges in the SNAP group.  -->
-
-Yongpan Sheng currently a Research Assistant at <a href="http://www.cse.cqu.edu.cn/" target="_blank">School of Big Data and Software Engineering</a>, Chongqing University (<a href="https://www.cqu.edu.cn/" target="_blank">CQU</a>). He obtained his Ph.D. degree in Computer Architecture from the <a href="http://www.scse.uestc.edu.cn/" target="_blank">School of Computer Science and Engineering</a>, University of Electronic Science and Technology of China (<a href="https://www.uestc.edu.cn/" target="_blank">UESTC</a>) on Auguest 2020, under the supervisor of Prof. <a href="https://scholar.google.com/citations?hl=en&user=gF0H9nEAAAAJ" target="_blank"> Zenglin Xu</a>. Prior to that, He received his Bachelor's Degree in Network Engineering from Chengdu University of Information Technology (<a href="https://www.cuit.edu.cn/" target="_blank">CUIT</a>), and Master's Degree in Software Engineering from University of Electronic Science and Technology of China (<a href="https://www.uestc.edu.cn/" target="_blank">UESTC</a>) in 2011 and 2014, respectively. He joined the Research Practicum Program of University of New South Wales (<a href="https://www.unsw.edu.au/" target="_blank">UNSW</a>), as a joint training Ph.D. candidate working with Prof. <a href="http://home.cse.ust.hk/~weiwcs/" target="_blank">Wei Wang</a> from Oct. 2017 to Oct. 2018.<br></p>
+<!-- Before that -->
+Yongpan Sheng will join <a href="http://cis.swu.edu.cn/" target="_blank">College of Computer and Information Science, Software</a>, Southwest University (<a href="http://www.swu.edu.cn/" target="_blank">SU</a>) in the position of lecturer. Prior to that, he was a Research Assistant at <a href="http://www.cse.cqu.edu.cn/" target="_blank">School of Big Data and Software Engineering</a>, Chongqing University (<a href="https://www.cqu.edu.cn/" target="_blank">CQU</a>) from Sep. 2020 to Mar. 2022. In educationally, he obtained his Ph.D. degree in Computer Architecture from the <a href="http://www.scse.uestc.edu.cn/" target="_blank">School of Computer Science and Engineering</a>, University of Electronic Science and Technology of China (<a href="https://www.uestc.edu.cn/" target="_blank">UESTC</a>) on Auguest 2020, under the supervisor of Prof. <a href="https://scholar.google.com/citations?hl=en&user=gF0H9nEAAAAJ" target="_blank"> Zenglin Xu</a>. He received his Bachelor's Degree in Network Engineering from Chengdu University of Information Technology (<a href="https://www.cuit.edu.cn/" target="_blank">CUIT</a>), and Master's Degree in Software Engineering from University of Electronic Science and Technology of China (<a href="https://www.uestc.edu.cn/" target="_blank">UESTC</a>) in 2011 and 2014, respectively. He joined the Research Practicum Program of University of New South Wales (<a href="https://www.unsw.edu.au/" target="_blank">UNSW</a>), as a joint training Ph.D. candidate working with Prof. <a href="http://home.cse.ust.hk/~weiwcs/" target="_blank">Wei Wang</a> from Oct. 2017 to Oct. 2018.<br></p>
 
 <!-- Before joining UNSW in 2017, I worked as a Research Assistant at <a href="https://www.ubc.ca/">The University of British Columnbia, Canada</a> and a Digital Integerated Circuit Design Engineer at <a href="http://www.spreadtrum.com/en/index.html">Spreadtrum Communications, Inc, China</a>, respectively during 2015-2017. -->
 
@@ -135,7 +135,11 @@ Check out Sheng's up-to-date CV for more details.
   <a href="https://jackietseng.github.io/conference_call_for_paper/conferences-with-ccf.html" target="_blank">2019-2020 International Conferences in Artificial Intelligence, Machine Learning, Computer Vision, Data Mining, Natural Language Processing and Robotics</a> |
   <a href="https://aideadlin.es/?sub=ML,CV,NLP,RO,SP,DM" target="_blank">AI Conference Deadlines</a> |
   <a href="https://mp.weixin.qq.com/s/6HuuRyHETiSOn2JJGD3TuA" target="_blank">2021下半年会议论文投稿时间小结与历年接受率回顾（欢迎收藏）</a> |
-  <a href="https://zhuanlan.zhihu.com/p/371282122" target="_blank">NLP 2021-2022会议期刊整理</a>
+  <a href="https://zhuanlan.zhihu.com/p/371282122" target="_blank">NLP 2021-2022会议期刊整理</a> |
+  <a href="https://mp.weixin.qq.com/s/dt-yurUZ_T7-58JKvpfuBg" target="_blank">官宣！高质量科技期刊分级目录来了！</a> |
+  <a href="https://mp.weixin.qq.com/s/8UWbFXblU6MjccxEX_H4sw" target="_blank">CCF推荐会议 | 软件工程：截稿日期纵览（含ISSTA，FSE/ESEC等）</a> |
+  <a href="https://www.toutiao.com/i7047329902739341835/?tt_from=weixin&utm_campaign=client_share&wxshare_count=1&timestamp=1640866373&app=news_article&utm_source=weixin&utm_medium=toutiao_android&use_new_style=1&req_id=2021123020125301015120909910A79091&share_token=f183a61b-b508-4b50-be9c-f05617a77e7e&group_id=7047329902739341835" target="_blank">计算机顶会论文投稿指南</a> |
+  <a href="https://mp.weixin.qq.com/s/VeL-3_easfaaBXlhRxPDgg" target="_blank">67本，CCF分领域发布高质量科技期刊分级目录公示</a> 
   <br />
   <a href="https://mp.weixin.qq.com/s/mEDVpzN04Du869ntLNy4kw" target="_blank">国际顶尖人工智能会议汇总</a>
   |
@@ -166,7 +170,11 @@ Check out Sheng's up-to-date CV for more details.
   <a href="https://mp.weixin.qq.com/s?__biz=Mzg4MDE3OTA5NA==&mid=2247490957&amp;idx=1&amp;sn=b9aa515f7833ba1503be298ac2360960&source=41#wechat_redirect" target="_blank">清华发布新版计算机学科推荐学术会议和期刊列表</a>
 <!--  <br /> -->
   |
+  <a href="https://github.com/bugaosuni59/TH-CPL" target="_blank">清华大学计算机学科推荐学术会议和期刊列表 (TH-CPL)</a>
+  |
   <a href="https://mp.weixin.qq.com/s/Cn5Ns8FaozfgD0AvB6yF8Q" target="_blank">计算机领域国内核心期刊汇总</a>
+  |
+  <a href="https://www.ccf.org.cn/ccftjgjxskwml/2022-02-20/755179.shtml" target="_blank">CCF发布计算领域高质量科技期刊分级目录</a>
 <!--  <br /> -->
   |
   <a href="./venue/通信、计算机等领域常见A类国际学术会议.docx" target="_blank">通信、计算机等领域常见A类国际学术会议</a>
@@ -182,7 +190,9 @@ Check out Sheng's up-to-date CV for more details.
   |
   <a href="https://www.ixigua.com/6903865090026504707/" target="_blank">什么是SCI、SSCI、EI、ISTP、CPCI、CSCD和核心期刊？</a> 
   |
-  <a href="https://mp.weixin.qq.com/s/yiVbSJXDOf8ZRCvbUClBOQ" target="_blank">《国际期刊预警名单（试行）》正式发布！生物医学占比过半</a> 
+  <a href="https://mp.weixin.qq.com/s/yiVbSJXDOf8ZRCvbUClBOQ" target="_blank">《国际期刊预警名单（试行）》正式发布！生物医学占比过半</a>
+  |
+  <a href="https://earlywarning.fenqubiao.com/#/" target="_blank">《国际期刊预警名单》官方网站</a>  
   <br />
   <br />
   
