--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -160,6 +160,8 @@
     |
     <a href="#" target="_blank">AAMAS</a>
     |
+    <a href="https://sites.google.com/site/innsaustraliachapter/" target="_blank">IJCNN</a>
+    |
     <br/>
 
 
@@ -262,6 +264,8 @@
     |
     <a href="https://globecom2022.ieee-globecom.org/" target="_blank">GLOBECOM</a>
     |
+    <a href="https://www.aacl2022.org/Submission/paper" target="_blank">AACL-IJCNLP (<a href="https://mp.weixin.qq.com/s/QvByOQY2NzSYsGbYRZlmcA" target="_blank">Translation</a>)</a>
+    |    
     <a href="https://icc2022.ieee-icc.org/" target="_blank">ICC</a>
     |
     <a href="https://inlgmeeting.github.io/calls.html" target="_blank">INLG</a>
