--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -182,6 +182,8 @@
     |
     <a href="https://2022.sigmod.org/" target="_blank">ACM SIGMOD</a>
     |
+    <a href="https://vldb.org/2022/" target="_blank">VLDB</a>
+    |
     <a href="https://ijcai-22.org/" target="_blank">IJCAI</a>
     |
     <a href="https://2022.acmmm.org/" target="_blank">ACMM</a>
@@ -377,6 +379,10 @@
     <a href="https://sigir.org/sigir2021/accepted-papers/" target="_blank">SIGIR</a>
     |
     <a href="https://icde2021.gr/accepted-papers/" target="_blank">ICDE</a>
+    |
+    <a href="https://2021.sigmod.org/" target="_blank">ACM SIGMOD</a>
+    |
+    <a href="https://vldb.org/2021/" target="_blank">VLDB</a>
     |
     <a href="https://www.ijcai.org/proceedings/2021/" target="_blank">IJCAI</a>
     |
@@ -975,9 +981,7 @@
     |
     <a href="https://mp.weixin.qq.com/s/GZ_QBPF9iZt_QbziS95WWQ" target="_blank">实践教程｜PyTorch训练加速技巧</a>
     |
-    <a href="https://mp.weixin.qq.com/s/XJ89xitpETEO_x1bykLy2w" target="_blank">Pytorch Lightning 完全攻略</a>
-    |
-    <a href="https://mp.weixin.qq.com/s/llrSum-3u_EjDGRdxeXbhA" target="_blank">Pytorch Lightning 完全攻略！</a>
+    <a href="https://mp.weixin.qq.com/s/nPj8ID7DhZpAvkM4QxWHcg" target="_blank">Pytorch Lightning 完全攻略</a>
     |
     
 <!--   <br /> -->
