--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1651,6 +1651,8 @@ Biochemistry Field：
 <br />
     <a href="https://minlab.ac.cn/members/" target="_blank">Mingwei Min [<a href="https://minlab.ac.cn/" target="_blank">Min Lab</a>]</a>
     |
+    <a href="https://bigaidream.github.io/" target="_blank">Jie Fu [<a href="https://zhuanlan.zhihu.com/p/477800872?utm_source=wechat_timeline&utm_medium=social&utm_oi=69409255194624&s_r=0&wechatShare=2" target="_blank">Recruitment info</a>]</a>
+    |
   <br />
   <br />
 Food Computation Field：
