--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -141,6 +141,9 @@
     <li><strong><font color="#874e26"><a href="https://web.stanford.edu/~jurafsky/slp3/">Speech and Language Processing (3rd ed. draft) [<a href="http://web.stanford.edu/~jurafsky/slp3/ed3book_dec292021.pdf" target="_blank">Book</a>] [<a href="https://mp.weixin.qq.com/s/xz0fKzXi6OzzFYg9GszBzw" target="_blank">Report</a>]</a></a></font></strong></li>
 
 
+    <li><strong><font color="#874e26"><a href="http://product.dangdang.com/29289680.html">神经网络与深度学习 (Charu C. Aggarwal博士 著)  [<a href="https://mp.weixin.qq.com/s/ZYubz3-N24dDSCNV3Nkhgg" target="_blank">Report</a>]</a></a></font></strong></li>
+
+
     <li><strong><font color="#874e26"><a href="https://github.com/shengyp/book_recommender">Book Recommendation</a></font></strong></li>
 </ul>
 
@@ -278,7 +281,7 @@
     |
     <a href="#" target="_blank">CCL</a>
     |
-    <a href="#" target="_blank">CCKS</a>
+    <a href="http://ise.ysu.edu.cn/info/1212/5225.htm" target="_blank">CCKS</a>
     |
     <a href="#" target="_blank">CCIR</a>
     |
@@ -1533,6 +1536,8 @@ NLP/KG Field：
     |
 <!-- Southwestern University of Finance and Economics -->
     <a href="https://it.swufe.edu.cn/info/1107/7549.htm" target="_blank">Qiang Gao</a>
+    |
+    <a href="https://it.swufe.edu.cn/szdw/fjs.htm" target="_blank">Yu Zhao</a>
     |
 <!-- HIT -->
     <a href="https://wilburone.github.io/index.html#" target="_blank">Lifu Huang</a>
