--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -227,7 +227,9 @@
     | 
     <a href="https://conf.researchr.org/track/icpc-2022/icpc-2022-research" target="_blank">ICPC</a>
     |
-    <a href="https://modelsward.scitevents.org/CallForPapers.aspx" target="_blank">MoDELS</a>
+    <a href="https://conf.researchr.org/track/models-2022/models-2022-technical-track" target="_blank">MoDELS</a>
+    |
+    <a href="https://conferences.computer.org/icws/2022/cfp/" target="_blank">ICWS</a>
     |
     <a href="https://internetware2022.github.io/" target="_blank">Internetware</a>
     |
