--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -997,7 +997,8 @@
     |
     <a href="https://mp.weixin.qq.com/s/nPj8ID7DhZpAvkM4QxWHcg" target="_blank">Pytorch Lightning 完全攻略</a>
     |
-    
+    <a href="https://mp.weixin.qq.com/s/_tZ-YFl1JGUgsN7AYfGo6g" target="_blank">终于可用可组合函数转换库！PyTorch 1.11发布，弥补JAX短板，支持Python 3.10</a>
+    |   
 <!--   <br /> -->
 
 <br />
