--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -170,6 +170,8 @@
     |
     <a href="https://sites.google.com/site/innsaustraliachapter/" target="_blank">IJCNN</a>
     |
+    <a href="#" target="_blank">PAKDD</a>
+    | 
     <br/>
 
 
@@ -286,7 +288,7 @@
     |
     <a href="https://inlgmeeting.github.io/calls.html" target="_blank">INLG</a>
     |
-    <a href="#" target="_blank">CCL</a>
+    <a href="http://cips-cl.org/static/CCL2022/index.html" target="_blank">CCL</a>
     |
     <a href="http://ise.ysu.edu.cn/info/1212/5225.htm" target="_blank">CCKS</a>
     |
@@ -1560,7 +1562,7 @@ NLP/KG Field：
     |
     <a href="https://sheng-z.github.io/" target="_blank">Sheng Zhang</a>
     |
-    <a href="https://sites.google.com/site/zhaosendong/home?pli=1#" target="_blank">Sendong Zhao</a>
+    <a href="https://sites.google.com/site/zhaosendong/sendong-stan-zhao-%E8%B6%99%E6%A3%AE%E6%A3%9F" target="_blank">Sendong Zhao</a>
     |
 <!-- Northeastern University -->
     <a href="http://faculty.neu.edu.cn/renfeiliang/zh_CN/zdylm/262580/list/index.htm" target="_blank">Feiliang Ren</a>
@@ -1591,7 +1593,10 @@ Machine Learning Field：
     <a href="http://changxu.xyz/" target="_blank">Chang Xu</a>
     |
     <a href="http://www.fanny-yang.de/" target="_blank">Fanny Yang</a>
-    |       
+    |
+<!-- Renmin University of China -->
+    <a href="https://hongtengxu.github.io/" target="_blank">Hongteng Xu</a>
+    |        
   <br />
   <br />
 Database Field：
