--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -198,7 +198,7 @@
     |
     <a href="https://2022.acmmm.org/" target="_blank">ACMM</a>
     |
-    <a href="hhttps://iswc2022.semanticweb.org/" target="_blank">ISWC</a>
+    <a href="https://iswc2022.semanticweb.org/" target="_blank">ISWC</a>
     |
     <a href="https://coling2022.org/Cpapers" target="_blank">COLING</a>
     |
@@ -313,6 +313,8 @@
     <a href="http://iccrd.org/" target="_blank">ICCRD</a>
     |
     <a href="http://inpluslab.com/icss2022/" target="_blank">ICSS</a>
+    |
+    <a href="https://conf.ccf.org.cn/web/html7/HYJS.html?channelId=b486b0b37c5749e3865872adc7028a79&globalId=m9359097655178076161643179876462" target="_blank">NDBC</a>
     |
     <br/>
     <a href="https://zhuanlan.zhihu.com/p/419669070?utm_source=wechat_session&utm_medium=social&utm_oi=1305131945592676352" target="_blank">ICLR 2022图学习领域都在研究什么？Open Review投稿文章一览</a>
