--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -290,7 +290,7 @@
     |
     <a href="http://cips-cl.org/static/CCL2022/index.html" target="_blank">CCL</a>
     |
-    <a href="http://ise.ysu.edu.cn/info/1212/5225.htm" target="_blank">CCKS</a>
+    <a href="http://sigkg.cn/ccks2022/" target="_blank">CCKS</a>
     |
     <a href="#" target="_blank">CCIR</a>
     |
