--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1609,6 +1609,18 @@ Database Field：
     |     
   <br />
   <br />
+Geographic Information Systems Field：
+<br />
+    <a href="https://researchers.uq.edu.au/researcher/10854" target="_blank">Hongzhi Yin</a>
+    |
+    <a href="http://fi.ee.tsinghua.edu.cn/~liyong/" target="_blank">Yong Li</a>
+    |
+    <a href="https://sites.google.com/view/chengaothu/" target="_blank">Chen Gao</a>
+    |
+    <a href="http://staff.ustc.edu.cn/~hexn/" target="_blank">Xiangnan He</a>
+    |        
+  <br />
+  <br />
 Complex Networks Field：
 <br />
     <a href="http://networkscience.cn/" target="_blank">Xiaolong Ren</a>
