--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -166,6 +166,8 @@
     |
     <a href="https://2023.sigmod.org/index.shtml" target="_blank">ACM SIGMOD</a>
     |
+    <a href="https://conf.researchr.org/home/icse-2023" target="_blank">ICSE</a>
+    |
     <a href="#" target="_blank">AAMAS</a>
     |
     <a href="https://sites.google.com/site/innsaustraliachapter/" target="_blank">IJCNN</a>
@@ -292,7 +294,7 @@
     |
     <a href="http://sigkg.cn/ccks2022/" target="_blank">CCKS</a>
     |
-    <a href="#" target="_blank">CCIR</a>
+    <a href="https://mp.weixin.qq.com/s/kUAgty0Y1S3-IM4hWbDIfA" target="_blank">CCIR</a>
     |
     <a href="#" target="_blank">ICBK</a>
     |
@@ -414,6 +416,8 @@
     </a>
     |
     <a href="https://aamas2021.soton.ac.uk/programme/accepted-papers/" target="_blank">AAMAS</a>
+    |
+    <a href="https://2020.icse-conferences.org/program/program-icse-2020/" target="_blank">ICSE</a>
     |
     <a href="https://2021.esec-fse.org/program/program-fse-2021/" target="_blank">FSE ESEC</a>
     |
