--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -306,6 +306,8 @@
     |
     <a href="http://chinamm.csig.org.cn/2022/paper.html" target="_blank">ChinaMM</a>
     |
+    <a href="http://chinasoft.ccf.org.cn/" target="_blank">ChinaSoft</a>
+    |
     <a href="https://conf.scholat.com/home/ccscw/2022" target="_blank">ChinaCSCW</a>
     |
     <a href="https://ccbr99.cn/cfp.html?c=cfp" target="_blank">CCBR</a>
