--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -208,7 +208,7 @@
     |  
     <a href="https://2022.ecmlpkdd.org/" target="_blank">ECML-PKDD</a>
     |
-    <a href="#" target="_blank">CIKM</a>
+    <a href="https://www.cikm2022.org/calls" target="_blank">CIKM</a>
     |
     <a href="https://2022.ieeeicme.org/" target="_blank">ICME</a>
     |
