--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1017,7 +1017,9 @@
     <a href="https://mp.weixin.qq.com/s/nPj8ID7DhZpAvkM4QxWHcg" target="_blank">Pytorch Lightning 完全攻略</a>
     |
     <a href="https://mp.weixin.qq.com/s/_tZ-YFl1JGUgsN7AYfGo6g" target="_blank">终于可用可组合函数转换库！PyTorch 1.11发布，弥补JAX短板，支持Python 3.10</a>
-    |   
+    |
+    <a href="https://mp.weixin.qq.com/s/3F4UghcVi0z8BLzchCbHbg" target="_blank">扔掉老破V100、A100，英伟达新一代计算卡H100来了！</a>
+    |    
 <!--   <br /> -->
 
 <br />
@@ -1507,6 +1509,9 @@ NLP/KG Field：
     |
     <a href="https://yumeng5.github.io/" target="_blank">Yu Meng</a>
     |
+<!-- UC Santa Barbara (UCSB) -->
+    <a href="https://jingjingxu.com/#about" target="_blank">Jingjing Xu</a>
+    |
 <!-- UK -->
     <a href="https://www.cs.ox.ac.uk/isg/people/jiaoyan.chen/" target="_blank">Jiaoyan Chen</a>
     |
@@ -1583,6 +1588,9 @@ NLP/KG Field：
     <a href="https://sheng-z.github.io/" target="_blank">Sheng Zhang</a>
     |
     <a href="https://sites.google.com/site/zhaosendong/sendong-stan-zhao-%E8%B6%99%E6%A3%AE%E6%A3%9F" target="_blank">Sendong Zhao</a>
+    |
+<!-- HIT -->
+    <a href="http://sim.whu.edu.cn/info/1054/10981.htm" target="_blank">Liang Hong</a>
     |
 <!-- Northeastern University -->
     <a href="http://faculty.neu.edu.cn/renfeiliang/zh_CN/zdylm/262580/list/index.htm" target="_blank">Feiliang Ren</a>
