--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -202,7 +202,7 @@
     |
     <a href="https://2022.acmmm.org/" target="_blank">ACMM</a>
     |
-    <a href="" target="_blank">EMNLP</a>
+    <a href="https://2022.emnlp.org/" target="_blank">EMNLP</a>
     |   
     <a href="https://iswc2022.semanticweb.org/" target="_blank">ISWC</a>
     |
