--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1652,6 +1652,12 @@ Database Field：
     |      
   <br />
   <br />
+Spatial-Temporal Data Mining Field：
+<br />
+    <a href="https://wangleye.github.io/" target="_blank">Leye Wang</a>
+    |     
+  <br />
+  <br />
 Geographic Information Systems Field：
 <br />
     <a href="https://researchers.uq.edu.au/researcher/10854" target="_blank">Hongzhi Yin</a>
