--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1036,7 +1036,9 @@
     <a href="https://mp.weixin.qq.com/s/pnsWJ7MA1ComT-af1Vzvsw" target="_blank">Transformer性能优化：运算和显存</a>
     |
     <a href="https://mp.weixin.qq.com/s/AB2zv94dDoFnwISJ6DjKDw" target="_blank">深度学习『 调参 』技巧合集</a>
-    |          
+    |
+    <a href="https://mp.weixin.qq.com/s/GewMM_zfr-_1S43zX_C2zA" target="_blank">深度神经网络模型训练中的 tricks（原理与代码汇总）</a>
+    |              
 <!--   <br /> -->
 
 <br />
@@ -1631,6 +1633,12 @@ NLP/KG Field：
 <!-- 360 -->
     <a href="https://liuhuanyong.github.io/" target="_blank">Huanyong Liu</a>
     |
+  <br />
+  <br />
+Human-computer Interaction Field：
+<br />
+    <a href="https://pi.cs.tsinghua.edu.cn/people/#faculty" target="_blank">Yuanchun Shi</a>
+    |       
   <br />
   <br />
 Machine Learning Field：
