--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1657,7 +1657,9 @@ Database Field：
     <a href="https://fangyixiang.github.io/index.html" target="_blank">Yixiang Fang</a>
     |
     <a href="https://siqiangluo.wixsite.com/homepage" target="_blank">Siqiang Luo</a>
-    |      
+    |
+    <a href="https://www1.se.cuhk.edu.hk/~swang/" target="_blank">Sibo Wang</a>
+    |        
   <br />
   <br />
 Spatial-Temporal Data Mining Field：
