--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -238,7 +238,7 @@
     |
     <a href="https://conf.researchr.org/home/esem-2022" target="_blank">ESEM</a>
     |
-    <a href="#" target="_blank">ISSRE</a>
+    <a href="https://issre2022.github.io/calls_cfp-research.html" target="_blank">ISSRE</a>
     | 
     <a href="https://conf.researchr.org/track/icpc-2022/icpc-2022-research" target="_blank">ICPC</a>
     |
