--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1641,6 +1641,12 @@ Human-computer Interaction Field：
     |       
   <br />
   <br />
+Data mining Field：
+<br />
+    <a href="https://xiangzhang.info/index.html" target="_blank">Xiang Zhang</a>
+    |    
+  <br />
+  <br />
 Machine Learning Field：
 <br />
     <a href="http://changxu.xyz/" target="_blank">Chang Xu</a>
@@ -1683,6 +1689,12 @@ Geographic Information Systems Field：
 Complex Networks Field：
 <br />
     <a href="http://networkscience.cn/" target="_blank">Xiaolong Ren</a>
+    |       
+  <br />
+  <br />
+Visual Analytics Field:
+<br />
+    <a href="http://www.cad.zju.edu.cn/home/chenwei/" target="_blank">Wei Chen</a>
     |       
   <br />
   <br />
