--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -184,7 +184,7 @@
     |
     <a href="https://icdcs2022.icdcs.org/call-for-demo-and-posters/" target="_blank">ICDCS</a>
     |
-    <a href="#" target="_blank">ACL</a> (<a href="https://csrr-workshop.github.io/" target="_blank">CSRR</a>)
+    <a href="https://www.2022.aclweb.org/papers" target="_blank">ACL</a> (<a href="https://csrr-workshop.github.io/" target="_blank">CSRR</a>)
     |
     <a href="https://kdd.org/kdd2022/" target="_blank">KDD (<a href="https://www.dexa.org/biokdd2022" target="_blank">BIOKDD</a>)</a>
     |
