--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1523,6 +1523,9 @@ NLP/KG Field：
     |
     <a href="https://eric-xw.github.io/" target="_blank">Xin (Eric) Wang</a>
     |
+<!-- New Jersey Institute of Technology -->
+    <a href="https://web.njit.edu/~ym329/index.html" target="_blank">Yao Ma</a>
+    |
 <!-- Rutgers University – New Brunswick -->
     <a href="http://yongfeng.me/" target="_blank">Yongfeng Zhang</a>
     |
