--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -623,6 +623,8 @@
     |
     <a href="https://mp.weixin.qq.com/s/CqwIRT4SO-dfA_LscIeD7Q" target="_blank">WWW2021 | 知识图谱、推荐系统论文集锦</a>
     |
+    <a href="https://mp.weixin.qq.com/s/-JHQrer8yP7SmBrrRy3U1g" target="_blank">谷歌大牛Jeff Dean单一作者撰文：深度学习研究的黄金十年</a>
+    |
 <!--     <br /> -->   
 <h4>2020</h4>
     <a href="https://acl2020.org/program/accepted/#system-demonstrations" target="_blank">ACL</a>
@@ -1635,8 +1637,6 @@ NLP/KG Field：
     |
     <a href="https://lidongbing.github.io/" target="_blank">Lidong Bing</a>
     |
-    <a href="https://xin-xia.github.io/" target="_blank">Xin Xia</a>
-    |
     <a href="https://yunc.me/" target="_blank">Yun Chen</a>
     |
 <!-- 360 -->
@@ -1727,6 +1727,9 @@ Distributional System Field：
   <br />
 SE Field：
 <br />
+<!-- Huawei Company -->
+    <a href="https://xin-xia.github.io/" target="_blank">Xin Xia</a>
+    |
     <a href="https://liuhuigmail.github.io/" target="_blank">Hui Liu</a>
     |
     <a href="http://www.lamda.nju.edu.cn/lim/" target="_blank">Ming Li</a>
