--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1042,7 +1042,9 @@
     <a href="https://mp.weixin.qq.com/s/AB2zv94dDoFnwISJ6DjKDw" target="_blank">深度学习『 调参 』技巧合集</a>
     |
     <a href="https://mp.weixin.qq.com/s/GewMM_zfr-_1S43zX_C2zA" target="_blank">深度神经网络模型训练中的 tricks（原理与代码汇总）</a>
-    |              
+    |
+    <a href="https://mp.weixin.qq.com/s/yGM0gzHxAPdMPSEhUtR3QQ" target="_blank">PyTorch常用代码段合集</a>
+    |                  
 <!--   <br /> -->
 
 <br />
